--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background: url('https://github.com/cbilinski101/cbilinski101.github.io/blob/main/grey%20theme.png') no-repeat center center fixed;
+            background: url('grey_theme.png') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Poppins', sans-serif;
             color: #ddd;
