--- a/index.html
+++ b/index.html
@@ -86,12 +86,11 @@
             <p><i class="bi-bicycle icon"></i> <a href="https://cbilinski101.github.io/bike_stations/">Bike Stations</a> - Toronto bike station insights.</p>
             <p><i class="bi-cpu-fill icon"></i> <a href="https://cbilinski101.github.io/Project-3/">Project 3</a> - Advanced machine learning project.</p>
             
+            <h2><i class="bi-envelope-fill icon"></i> Contact</h2>
+            <p>Email: <a href="mailto:cbilinski101@gmail.com" style="color: #00bcd4; text-decoration: none; font-weight: bold;">cbilinski101@gmail.com</a></p>
             <h2>✨ Explore My GitHub Repositories</h2>
             <p><a href="https://github.com/cbilinski101" class="btn btn-custom" target="_blank">Visit My GitHub</a></p>
-            <p>✨ Thanks for stopping by, and let’s connect!</p>
-
-            <h2> Contact</h2>
-            <p>Email: cbilinski101@gmail.com</p>
+            <p>✨ Thanks for stopping by, and let’s connect!</p>  
         </div>
     </div>
     
