--- a/index.html
+++ b/index.html
@@ -72,13 +72,7 @@
             <p>With an average of <strong>99.6%</strong> in my program so far, I’ve demonstrated my ability to excel in challenging material. Given the opportunity, I’m confident in my ability to quickly master any new skills required and apply them effectively to real-world problems.</p>
             
             <h2> Check Out My Projects</h2>
-            <p>Feel free to explore some of the projects I’ve been working on during the Bootcamp! You’ll see me using tools like:</p>
-            <ul>
-                <li>Python (Pandas, NumPy)</li>
-                <li>SQL</li>
-                <li>Data Visualization (Matplotlib, Seaborn, Tableau)</li>
-                <li>Machine Learning</li>
-            </ul>
+            <p>Feel free to explore some of the projects I’ve been working on during the Bootcamp! You’ll see me using tools like Python, SQL, Data Visualization (Matplotlib, Seaborn, Tableau), and Machine Learning.</p>
             
             <h2><i class="bi-folder-fill icon"></i> Projects</h2>
             <p><i class="bi-geo-fill icon"></i> <a href="https://cbilinski101.github.io/leaflet-challenge/">Leaflet Challenge</a> - Interactive mapping using Leaflet.js.</p>
