--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
     <div class="overlay d-flex align-items-center">
         <div class="container text-center">
-            <h1> Welcome to My GitHub Profile!</h1>
+            <h1> Welcome to My Portfolio!</h1>
             <p>Throughout my journey, I’ve taken time to focus on being a mother and caregiver—experiences that have taught me so much about handling complex situations with patience, empathy, and resilience. Now, I’m excited to dive into a new chapter, exploring my potential and contributing my skills to meaningful projects.</p>
             
             <p>I’m transitioning into data analytics, building on my background in data management, reporting, and operational support. I love finding ways to make processes smoother, uncovering insights from data, and helping people make informed decisions.</p>
