--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
             color: #ffcc00;
             margin-bottom: 10px;
         }
+        .profile-pic {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 3px solid #ffcc00;
+            margin-bottom: 20px;
+        }
     </style>
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
@@ -56,6 +64,7 @@
 <body>
     <div class="overlay d-flex align-items-center">
         <div class="container text-center">
+            <img src="image7.JPG" alt="Profile Picture" class="profile-pic">
             <h1> Welcome to My Portfolio!</h1>
             <p>Throughout my journey, I’ve taken time to focus on being a mother and caregiver—experiences that have taught me so much about handling complex situations with patience, empathy, and resilience. Now, I’m excited to dive into a new chapter, exploring my potential and contributing my skills to meaningful projects.</p>
             
@@ -91,6 +100,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
