--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 <body>
     <div class="overlay d-flex align-items-center">
         <div class="container text-center">
-            <img src="image7.JPG" alt="Profile Picture" class="profile-pic">
+            https://github.com/cbilinski101/cbilinski101.github.io/blob/main/Picture.png?raw=true
+            <h2>Christine Bilinski</h2>
             <h1> Welcome to My Portfolio!</h1>
             <p>Throughout my journey, I’ve taken time to focus on being a mother and caregiver—experiences that have taught me so much about handling complex situations with patience, empathy, and resilience. Now, I’m excited to dive into a new chapter, exploring my potential and contributing my skills to meaningful projects.</p>
             
