--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             margin-bottom: 10px;
         }
         .profile-pic {
-            width: 150px;
-            height: 150px;
+            width: 200px;
+            height: 200px;
             object-fit: cover;
-            border-radius: 50%;
+            border-radius: 10px;
             border: 3px solid #ffcc00;
             margin-bottom: 20px;
         }
