--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <div class="overlay d-flex align-items-center">
+    <div class="overlay d-flex align-items-center flex-column">
+        <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/Picture.png" alt="Profile Picture" class="profile-pic">
         <div class="container text-center">
-            <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/Picture.png" alt="Profile Picture" class="profile-pic">
             <h2>Christine Bilinski</h2>
             <h1> Welcome to My Portfolio!</h1>
             <p>Throughout my journey, I’ve taken time to focus on being a mother and caregiver—experiences that have taught me so much about handling complex situations with patience, empathy, and resilience. Now, I’m excited to dive into a new chapter, exploring my potential and contributing my skills to meaningful projects.</p>
@@ -101,4 +101,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
