--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             margin-bottom: 10px;
         }
         .profile-pic {
-            width: 200px;
+            width: 300px;
             height: 200px;
             object-fit: cover;
             border-radius: 10px;
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div class="overlay d-flex align-items-center flex-column">
-        <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/Picture.png?raw=true" alt="Profile Picture" class="profile-pic">
+        <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/Picture.png" alt="Profile Picture" class="profile-pic">
         <div class="container text-center">
             <h2>Christine Bilinski</h2>
             <h1> Welcome to My Portfolio!</h1>
