--- a/index.html
+++ b/index.html
@@ -75,20 +75,20 @@
             
             <h3> Skills Learned So Far</h3>
             <ul>
-            <li>Excel</li>
-            <li>VBA Scripting</li>
-            <li>Python</li>
-            <li>Pandas</li>
-            <li>Data Visualization</li>
-            <li>Python APIs</li>
-            <li>SQL</li>
-            <li>Advanced SQL</li>
-            <li>Data Collection</li>
-            <li>NoSQL Databases</li>
-            <li>ETL (Extract, Transform, Load)</li>
-            <li>Interactive Visualizations</li>
-            <li>Mapping</li>
-            <li>Unsupervised Learning</li>
+            <p>Excel</p>
+            <p>VBA Scripting</p>
+            <p>Python</p>
+            <p>Pandas</p>
+            <p>Data Visualization</p>
+            <p>Python APIs</p>
+            <p>SQL</p>
+            <p>Advanced SQL</p>
+            <p>Data Collection</p>
+            <p>NoSQL Databases</p>
+            <p>ETL (Extract, Transform, Load)</p>
+            <p>Interactive Visualizations</p>
+            <p>Mapping</p>
+            <p>Unsupervised Learning</p>
         </ul>
             
             <h3> In Progress</h3>
