--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
             <h2> My Skills and Learning Journey</h2>
             
             <ul>
-            <p>Excel
-                
-            VBA Scripting</p>
+            <p>Excel     VBA Scripting     Python     Pandas
+            Data Visualization</p>
             <p>Python</p>
             <p>Pandas</p>
             <p>Data Visualization</p>
