--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h2> My Skills and Learning Journey</h2>
             
             <ul>
-            <p>Excel     VBA Scripting     Python     Pandas
+            <p>Excel --- VBA Scripting --- Python --- Pandas
             Data Visualization</p>
             <p>Python</p>
             <p>Pandas</p>
