--- a/index.html
+++ b/index.html
@@ -74,25 +74,15 @@
             <h2> My Skills and Learning Journey</h2>
             
             <ul>
-            <p>✨ Excel ✨ VBA Scripting ✨ Python ✨ Pandas ✨ Data Visualization</p>
-            <p>Python</p>
-            <p>Pandas</p>
-            <p>Data Visualization</p>
-            <p>Python APIs</p>
-            <p>SQL</p>
-            <p>Advanced SQL</p>
-            <p>Data Collection</p>
-            <p>NoSQL Databases</p>
-            <p>ETL (Extract, Transform, Load)</p>
-            <p>Interactive Visualizations</p>
-            <p>Mapping</p>
-            <p>Unsupervised Learning</p>
+            <p>✨Excel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨VBA Scripting&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Python</p>
+            <p>✨Pandas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Data Visualization&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Python APIs</p>
+            <p>✨SQL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Advanced SQL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Data Collection</p>
+            <p>✨NoSQL Databases&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ETL (Extract, Transform, Load)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Interactive Visualizations</p>
+            <p>✨Mapping</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Unsupervised Learning&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Supervised Learning</p> 
         </ul>
             <p></p>
             <h3> In Progress</h3>
-            <p>Supervised Learning</p> 
-            <p>Neural Networks and Deep Learning</p> 
-            <p>Big Data</p>
+            <p>✨Neural Networks and Deep Learning&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Big Data</p>
             
             <h2> My Commitment to Growth</h2>
             <p>With an average of <strong>99.6%</strong> in my program so far, I’ve demonstrated my ability to excel in challenging material. Given the opportunity, I’m confident in my ability to quickly master any new skills required and apply them effectively to real-world problems.</p>
