--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
             <h2> My Skills and Learning Journey</h2>
             
             <ul>
-            <p>✨Excel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨VBA Scripting&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Python</p>
-            <p>✨Pandas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Data Visualization&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Python APIs</p>
+            <p>✨Excel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨VBA Scripting&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+            <p>✨Python&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Pandas</p>
+            <p>✨Data Visualization&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Python APIs</p>
             <p>✨SQL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Advanced SQL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Data Collection</p>
             <p>✨NoSQL Databases&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ETL (Extract, Transform, Load)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Interactive Visualizations</p>
-            <p>✨Mapping</p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Unsupervised Learning&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Supervised Learning</p> 
+            <p>✨Mapping&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Unsupervised Learning&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Supervised Learning</p> 
         </ul>
             <p></p>
             <h3> In Progress</h3>
