--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             
             <ul>
             <p>✨Excel&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨VBA Scripting&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-            <p>✨Python&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Pandas</p>
+            <p>✨Python&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Pandas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
             <p>✨Data Visualization&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Python APIs</p>
             <p>✨SQL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Advanced SQL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Data Collection</p>
             <p>✨NoSQL Databases&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨ETL (Extract, Transform, Load)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨Interactive Visualizations</p>
