--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h1> Welcome to My Portfolio!</h1>
             <p>Throughout my journey, I’ve taken time to focus on being a mother and caregiver—experiences that have taught me so much about handling complex situations with patience, empathy, and resilience.</p>
             
-            <p>I'm transitioning into data analytics with the University of Toronto’s Data Analytics Bootcamp to be completed by February 27th. Building on my background in data management, reporting, and operational support. I love finding ways to make processes smoother, uncovering insights from data, and helping people make informed decisions.</p>
+            <p>I'm transitioning into data analytics with the <strong>University of Toronto’s Data Analytics Bootcamp</strong> to be completed by February 27th. Building on my background in data management, reporting, and operational support. I love finding ways to make processes smoother, uncovering insights from data, and helping people make informed decisions.</p>
             <pre>
 
 </pre>
