--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div class="overlay d-flex align-items-center flex-column">
-        <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/IMG_2289.png?raw=true" alt="Profile Picture" class="profile-pic">
+        <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/crop_photo.png?raw=true" alt="Profile Picture" class="profile-pic">
         <div class="container text-center">
             <h2>Christine Bilinski</h2>
             <h1> Welcome to My Portfolio!</h1>
