--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@
             width: 200px;
             height: 300px;
             object-fit: cover;
-            border-radius: 10px;
+            border-radius: 50%;
             border: 3px solid #ffdb58;
             margin-bottom: 20px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
         .skills-container {
             display: flex;
@@ -107,7 +110,7 @@
             <p><i class="bi-cpu-fill icon"></i> <a href="https://cbilinski101.github.io/Project-3/">Project 3</a> - Advanced machine learning application.</p>
             <h2>✨ Explore My GitHub & Connect</h2>
             <p><a href="https://github.com/cbilinski101" class="btn btn-custom" target="_blank">Visit My GitHub</a></p>
-            <p><a href="#" class="btn btn-custom">Connect on LinkedIn</a></p>
+            <p><a href="https://www.linkedin.com/in/christine-b-19367b31b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bc%2Bwd58NWRCCLmz98nEVs8A%3D%3D" class="btn btn-custom" target="_blank">Connect on LinkedIn</a></p>
             <p>✨ Thanks for stopping by, and let’s connect!</p>  
         </div>
     </div>
