--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background: url('grey_theme.png') no-repeat center center fixed;
+            background: url('nb_more_faded.png') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Poppins', sans-serif;
             color: #ddd;
@@ -80,7 +80,7 @@
 </head>
 <body>
     <div class="overlay d-flex align-items-center flex-column">
-        <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/crop_image.PNG?raw=true" alt="Profile Picture" class="profile-pic">
+        <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/circular_photo.png?raw=true?raw=true" alt="Profile Picture" class="profile-pic">
         <div class="container text-center">
             <h2> My Commitment to Growth</h2>
             <p>With an average of <strong>99.6%</strong> in my program, I’ve demonstrated my ability to excel in complex technical material. I am eager to continue learning, applying my skills to real-world data challenges, and contributing meaningfully to impactful projects.</p>
