--- a/index.html
+++ b/index.html
@@ -82,3 +82,35 @@
     <div class="overlay d-flex align-items-center flex-column">
         <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/circular_photo.png?raw=true" alt="Profile Picture" class="profile-pic">
         <div class="container text-center">
+            <h2> My Commitment to Growth</h2>
+            <p>With an average of <strong>99.6%</strong> in my program, I’ve demonstrated my ability to excel in complex technical material. I am eager to continue learning, applying my skills to real-world data challenges, and contributing meaningfully to impactful projects.</p>
+            <h2> My Acquired Skills</h2>
+            <div class="skills-container">
+                <p>✨ Excel</p> <p>✨ VBA Scripting</p> <p>✨ Python</p>
+                <p>✨ Pandas</p> <p>✨ Data Visualization</p> <p>✨ Python APIs</p>
+                <p>✨ SQL</p> <p>✨ Advanced SQL</p> <p>✨ Data Collection</p>
+                <p>✨ NoSQL Databases</p> <p>✨ ETL (Extract, Transform, Load)</p> <p>✨ Interactive Visualizations</p>
+                <p>✨ Mapping</p> <p>✨ Unsupervised Learning</p> <p>✨ Supervised Learning</p>
+                <p>✨ Neural Networks & Deep Learning</p> <p>✨ Big Data</p>
+            </div>
+            <h2> Check Out My Projects</h2>
+            <p>Explore some of the projects I’ve worked on during my journey, featuring Python, SQL, data visualization tools, and machine learning.</p>
+            <h2><i class="bi-folder-fill icon"></i> Projects</h2>
+            <p><i class="bi-geo-fill icon"></i> <a href="https://cbilinski101.github.io/leaflet-challenge/">Leaflet Challenge</a> - Interactive earthquake mapping using Leaflet.js.</p>
+            <p><i class="bi-bug-fill icon"></i> <a href="https://cbilinski101.github.io/belly-button-challenge/">Belly Button Analysis</a> - Dynamic microbial diversity visualizations with Plotly.js.</p>
+            <p><i class="bi-bicycle icon"></i> <a href="https://cbilinski101.github.io/bike_stations/">Bike Stations</a> - Toronto bike station data analysis and visualization.</p>
+            <p><i class="bi-cpu-fill icon"></i> <a href="https://cbilinski101.github.io/Project-3/">Project 3</a> - Advanced machine learning application.</p>
+            <h2> More About Me</h2>
+            <p>I have dedicated my time to both caregiving and professional development, refining skills in problem-solving, resilience, and adaptability.</p>
+            <p>Currently, I am completing the <strong>University of Toronto’s Data Analytics Bootcamp</strong>, set to conclude on February 27th.</p> 
+            <p>My background in data management and operational support has fueled my passion for efficiency, data-driven decision-making, and uncovering meaningful insights.</p>
+            <h2>✨ Explore My GitHub & Connect</h2>
+            <p><a href="https://github.com/cbilinski101" class="btn btn-custom" target="_blank">Visit My GitHub</a></p>
+            <p><a href="https://www.linkedin.com/in/christine-b-19367b31b" class="btn btn-custom" target="_blank">Connect on LinkedIn</a></p>
+            <p>✨ Thanks for stopping by, and let’s connect!</p>  
+        </div>
+    </div>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
