--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             background: rgba(0, 0, 0, 0.7);
             min-height: 100vh;
             padding: 50px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .container {
             background: rgba(50, 50, 50, 0.9);
@@ -27,6 +30,7 @@
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
             max-width: 90%;
             width: 800px;
+            position: relative;
         }
         h1, h2, h3 {
             color: #ffdb58;
@@ -59,10 +63,9 @@
             object-fit: cover;
             border-radius: 50%;
             border: 3px solid #ffdb58;
-            margin-bottom: 20px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+            position: absolute;
+            top: -100px;
+            right: 20px;
         }
         .skills-container {
             display: flex;
@@ -79,9 +82,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <div class="overlay d-flex align-items-center flex-column">
-        <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/circular_photo.png?raw=true" alt="Profile Picture" class="profile-pic">
+    <div class="overlay">
         <div class="container text-center">
+            <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/circular_photo.png?raw=true" alt="Profile Picture" class="profile-pic">
             <h2> My Commitment to Growth</h2>
             <p>With an average of <strong>99.6%</strong> in my program, I’ve demonstrated my ability to excel in complex technical material. I am eager to continue learning, applying my skills to real-world data challenges, and contributing meaningfully to impactful projects.</p>
             <h2> My Acquired Skills</h2>
