--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
             max-width: 90%;
             width: 800px;
-            position: relative;
+            display: flex;
+            align-items: center;
+            text-align: left;
+        }
+        .profile-pic {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 3px solid #ffdb58;
+            margin-right: 20px;
         }
         h1, h2, h3 {
             color: #ffdb58;
@@ -57,16 +67,6 @@
             color: #ffdb58;
             margin-bottom: 10px;
         }
-        .profile-pic {
-            width: 200px;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 50%;
-            border: 3px solid #ffdb58;
-            position: absolute;
-            top: -100px;
-            right: 20px;
-        }
         .skills-container {
             display: flex;
             flex-wrap: wrap;
@@ -83,10 +83,14 @@
 </head>
 <body>
     <div class="overlay">
-        <div class="container text-center">
+        <div class="container">
             <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/circular_photo.png?raw=true" alt="Profile Picture" class="profile-pic">
-            <h2> My Commitment to Growth</h2>
-            <p>With an average of <strong>99.6%</strong> in my program, I’ve demonstrated my ability to excel in complex technical material. I am eager to continue learning, applying my skills to real-world data challenges, and contributing meaningfully to impactful projects.</p>
+            <div>
+                <h2> My Commitment to Growth</h2>
+                <p>With an average of <strong>99.6%</strong> in my program, I’ve demonstrated my ability to excel in complex technical material. I am eager to continue learning, applying my skills to real-world data challenges, and contributing meaningfully to impactful projects.</p>
+            </div>
+        </div>
+        <div class="container text-center">
             <h2> My Acquired Skills</h2>
             <div class="skills-container">
                 <p>✨ Excel</p> <p>✨ VBA Scripting</p> <p>✨ Python</p>
