--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             background: url('nb_more_faded.png') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Poppins', sans-serif;
-            color: #ddd;
+            color: #f5f5f5;
+            line-height: 1.6;
         }
         .overlay {
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.5);
             min-height: 100vh;
             padding: 50px 0;
         }
@@ -55,10 +56,10 @@
         }
         .profile-pic {
             width: 200px;
-            height: 300px;
             object-fit: cover;
             border-radius: 50%;
             border: 3px solid #ffdb58;
+            box-shadow: 0px 4px 10px rgba(255, 219, 88, 0.6);
             margin-bottom: 20px;
             display: block;
             margin-left: auto;
@@ -67,12 +68,17 @@
         .skills-container {
             display: flex;
             flex-wrap: wrap;
-            gap: 15px;
+            gap: 10px;
             justify-content: center;
         }
-        .skills-container p {
-            flex: 1 1 30%;
-            text-align: center;
+        .skill-badge {
+            display: inline-block;
+            background: #ff9800;
+            color: white;
+            padding: 8px 12px;
+            border-radius: 20px;
+            font-size: 14px;
+            font-weight: 600;
         }
     </style>
     <!-- Icons -->
@@ -83,33 +89,44 @@
         <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/circular_photo.png?raw=true" alt="Profile Picture" class="profile-pic">
         <div class="container text-center">
             <h2> My Commitment to Growth</h2>
-            <p>With an average of <strong>99.6%</strong> in my program, I’ve demonstrated my ability to excel in complex technical material. I am eager to continue learning, applying my skills to real-world data challenges, and contributing meaningfully to impactful projects.</p>
+            <p>With an average of <strong>99.7%</strong> in my program, I’ve demonstrated my ability to excel in complex technical material.</p>
             <h2> My Acquired Skills</h2>
             <div class="skills-container">
-                <p>✨ Excel</p> <p>✨ VBA Scripting</p> <p>✨ Python</p>
-                <p>✨ Pandas</p> <p>✨ Data Visualization</p> <p>✨ Python APIs</p>
-                <p>✨ SQL</p> <p>✨ Advanced SQL</p> <p>✨ Data Collection</p>
-                <p>✨ NoSQL Databases</p> <p>✨ ETL (Extract, Transform, Load)</p> <p>✨ Interactive Visualizations</p>
-                <p>✨ Mapping</p> <p>✨ Unsupervised Learning</p> <p>✨ Supervised Learning</p>
-                <p>✨ Neural Networks & Deep Learning</p> <p>✨ Big Data</p>
+                <span class="skill-badge">Excel</span>
+                <span class="skill-badge">VBA Scripting</span>
+                <span class="skill-badge">Python</span>
+                <span class="skill-badge">SQL</span>
+                <span class="skill-badge">Machine Learning</span>
+                <span class="skill-badge">Deep Learning</span>
+                <span class="skill-badge">Data Visualization</span>
+                <span class="skill-badge">ETL</span>
+                <span class="skill-badge">NoSQL Databases</span>
+                <span class="skill-badge">Pandas</span>
+                <span class="skill-badge">TensorFlow</span>
+                <span class="skill-badge">Tableau</span>
+                <span class="skill-badge">Power BI</span>
+                <span class="skill-badge">Big Data</span>
             </div>
-            <h2> Check Out My Projects</h2>
-            <p>Explore some of the projects I’ve worked on during my journey, featuring Python, SQL, data visualization tools, and machine learning.</p>
-            <h2><i class="bi-folder-fill icon"></i> Projects</h2>
-            <p><i class="bi-geo-fill icon"></i> <a href="https://cbilinski101.github.io/leaflet-challenge/">Leaflet Challenge</a> - Interactive earthquake mapping using Leaflet.js.</p>
-            <p><i class="bi-bug-fill icon"></i> <a href="https://cbilinski101.github.io/belly-button-challenge/">Belly Button Analysis</a> - Dynamic microbial diversity visualizations with Plotly.js.</p>
-            <p><i class="bi-bicycle icon"></i> <a href="https://cbilinski101.github.io/bike_stations/">Bike Stations</a> - Toronto bike station data analysis and visualization.</p>
-            <p><i class="bi-cpu-fill icon"></i> <a href="https://cbilinski101.github.io/Project-3/">Project 3</a> - Advanced machine learning application.</p>
+            <h2> Projects</h2>
+            <p><i class="bi-folder-fill icon"></i> <a href="https://cbilinski101.github.io/leaflet-challenge/">Leaflet Challenge</a></p>
+            <p><i class="bi-bug-fill icon"></i> <a href="https://cbilinski101.github.io/belly-button-challenge/">Belly Button Analysis</a></p>
+            <p><i class="bi-bicycle icon"></i> <a href="https://cbilinski101.github.io/bike_stations/">Bike Stations</a></p>
             <h2> More About Me</h2>
-            <p>I have dedicated my time to both caregiving and professional development, refining skills in problem-solving, resilience, and adaptability.</p>
-            <p>Currently, I am completing the <strong>University of Toronto’s Data Analytics Bootcamp</strong>, set to conclude on February 27th.</p> 
-            <p>My background in data management and operational support has fueled my passion for efficiency, data-driven decision-making, and uncovering meaningful insights.</p>
-            <h2>✨ Explore My GitHub & Connect</h2>
-            <p><a href="https://github.com/cbilinski101" class="btn btn-custom" target="_blank">Visit My GitHub</a></p>
-            <p><a href="https://www.linkedin.com/in/christine-b-19367b31b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bc%2Bwd58NWRCCLmz98nEVs8A%3D%3D" class="btn btn-custom" target="_blank">Connect on LinkedIn</a></p>
-            <p>✨ Thanks for stopping by, and let’s connect!</p>  
+            <p>Completed the <strong>University of Toronto’s Data Analytics Bootcamp</strong> on February 27th, 2025.</p>
+            <p><a href="https://github.com/cbilinski101" class="btn btn-warning btn-lg" target="_blank">Visit My GitHub</a></p>
+            <p><a href="https://www.linkedin.com/in/christine-b-19367b31b" class="btn btn-info btn-lg" target="_blank">Connect on LinkedIn</a></p>
         </div>
     </div>
+    <script>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
