--- a/index.html
+++ b/index.html
@@ -5,65 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C. Bilinski | Portfolio</title>
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background: url('nb_more_faded.png') no-repeat center center fixed;
-            background-size: cover;
+            background: radial-gradient(circle, #0d1b2a, #1b263b, #415a77);
             font-family: 'Poppins', sans-serif;
-            color: #f5f5f5;
+            color: #e0e1dd;
             line-height: 1.6;
+            text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.2);
         }
         .overlay {
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(13, 27, 42, 0.85);
             min-height: 100vh;
             padding: 50px 0;
         }
         .container {
-            background: rgba(50, 50, 50, 0.9);
+            background: rgba(36, 51, 72, 0.95);
             padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+            border-radius: 15px;
+            box-shadow: 0px 0px 20px rgba(0, 255, 255, 0.3);
             max-width: 90%;
             width: 800px;
+            text-align: center;
         }
         h1, h2, h3 {
-            color: #ffdb58;
+            color: #00e1ff;
+            font-family: 'Orbitron', sans-serif;
         }
         a {
             color: #00e1ff;
             text-decoration: none;
             font-weight: bold;
+            transition: 0.3s;
         }
         a:hover {
-            color: #ff5722;
+            color: #ff00ff;
         }
         .btn-custom {
-            background: #ff9800;
+            background: linear-gradient(135deg, #00e1ff, #ff00ff);
             color: #fff;
             border-radius: 25px;
-            padding: 10px 20px;
+            padding: 12px 25px;
+            font-weight: bold;
+            text-transform: uppercase;
+            transition: 0.3s;
+            border: none;
         }
         .btn-custom:hover {
-            background: #e65100;
+            background: linear-gradient(135deg, #ff00ff, #00e1ff);
+            transform: scale(1.05);
         }
         .icon {
             font-size: 2rem;
-            color: #ffdb58;
+            color: #00e1ff;
             margin-bottom: 10px;
         }
         .profile-pic {
-            width: 200px;
+            width: 180px;
             object-fit: cover;
             border-radius: 50%;
-            border: 3px solid #ffdb58;
-            box-shadow: 0px 4px 10px rgba(255, 219, 88, 0.6);
+            border: 4px solid #00e1ff;
+            box-shadow: 0px 0px 20px rgba(0, 255, 255, 0.7);
             margin-bottom: 20px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
         }
         .skills-container {
             display: flex;
@@ -73,12 +78,13 @@
         }
         .skill-badge {
             display: inline-block;
-            background: #ff9800;
-            color: white;
-            padding: 8px 12px;
-            border-radius: 20px;
+            background: rgba(0, 225, 255, 0.2);
+            color: #00e1ff;
+            padding: 10px 15px;
+            border-radius: 25px;
             font-size: 14px;
             font-weight: 600;
+            border: 1px solid #00e1ff;
         }
     </style>
     <!-- Icons -->
@@ -87,7 +93,7 @@
 <body>
     <div class="overlay d-flex align-items-center flex-column">
         <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/circular_photo.png?raw=true" alt="Profile Picture" class="profile-pic">
-        <div class="container text-center">
+        <div class="container">
             <h2> My Commitment to Growth</h2>
             <p>With an average of <strong>99.7%</strong> in my program, I’ve demonstrated my ability to excel in complex technical material.</p>
             <h2> My Acquired Skills</h2>
@@ -113,8 +119,8 @@
             <p><i class="bi-bicycle icon"></i> <a href="https://cbilinski101.github.io/bike_stations/">Bike Stations</a></p>
             <h2> More About Me</h2>
             <p>Completed the <strong>University of Toronto’s Data Analytics Bootcamp</strong> on February 27th, 2025.</p>
-            <p><a href="https://github.com/cbilinski101" class="btn btn-warning btn-lg" target="_blank">Visit My GitHub</a></p>
-            <p><a href="https://www.linkedin.com/in/christine-b-19367b31b" class="btn btn-info btn-lg" target="_blank">Connect on LinkedIn</a></p>
+            <p><a href="https://github.com/cbilinski101" class="btn btn-custom" target="_blank">Visit My GitHub</a></p>
+            <p><a href="https://www.linkedin.com/in/christine-b-19367b31b" class="btn btn-custom" target="_blank">Connect on LinkedIn</a></p>
         </div>
     </div>
     <script>
