--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
     <div class="overlay d-flex align-items-center flex-column">
-        <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/circular_photo.png?raw=true" alt="Profile Picture" class="profile-pic">
+        <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/Screenshot%202025-01-14%20164801.png?raw=true" alt="Profile Picture" class="profile-pic">
         <div class="container">
             <h2> My Commitment to Growth</h2>
             <p>With an average of <strong>99.7%</strong> in my program, I’ve demonstrated my ability to excel in complex technical material.</p>
