--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <img src="https://github.com/cbilinski101/cbilinski101.github.io/blob/main/Screenshot%202025-01-14%20164801.png?raw=true" alt="Profile Picture" class="profile-pic">
         <div class="container">
             <h2> My Commitment to Growth</h2>
-            <p>Completed the Data Analytics Program with an <strong>A+</strong> in my program, I’ve demonstrated my ability to excel in complex technical material.</p>
+            <p>Completed the University of Toronto Data Analytics Program with an <strong>A+</strong>, I’ve demonstrated my ability to excel in complex technical material.</p>
             <h2> My Acquired Skills</h2>
             <div class="skills-container">
                 <span class="skill-badge">Excel</span>
