--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
   <p>🚀 Stay tuned — amazing things are coming soon!</p>
   <p>If you'd like to connect or view my current projects, feel free to check out my GitHub or LinkedIn below!</p>
   <p><a href="https://github.com/cbilinski101" class="btn btn-custom" target="_blank">Visit My GitHub</a></p>
-  <
+  <p><a href="https://www.linkedin.com/in/christine-b-19367b31b" class="btn btn-custom" target="_blank">Connect on LinkedIn</a></p>
+</div>
