--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
-<div class="container">
-  <h1>🚧 Site Under Construction 🚧</h1>
-  <p>Thank you for visiting! I'm currently working hard behind the scenes to upgrade this portfolio with even more exciting projects, insights, and skills.</p>
-  <p>🚀 Stay tuned — amazing things are coming soon!</p>
-  <p>If you'd like to connect or view my current projects, feel free to check out my GitHub or LinkedIn below!</p>
+<div class="container" style="
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 8px 32px 0 rgba(0, 255, 255, 0.37);
+    padding: 40px;
+    margin-bottom: 50px;
+">
+  <h1 style="color: #00e1ff;">🚧 Site Under Construction 🚧</h1>
+
+  <img src="nb_more_faded.png" alt="Under Construction" style="
+      width: 100%;
+      max-width: 600px;
+      margin: 20px 0;
+      border-radius: 20px;
+      box-shadow: 0px 0px 20px rgba(0, 255, 255, 0.6);
+      opacity: 0.85;
+  " />
+
+  <p style="color: #e0e1dd; font-size: 1.1em;">Thank you for visiting! I'm currently working hard behind the scenes to upgrade this portfolio with even more exciting projects, insights, and futuristic designs.</p>
+  
+  <p style="color: #e0e1dd;">🚀 Stay tuned — amazing things are on the way!</p>
+  
   <p><a href="https://github.com/cbilinski101" class="btn btn-custom" target="_blank">Visit My GitHub</a></p>
   <p><a href="https://www.linkedin.com/in/christine-b-19367b31b" class="btn btn-custom" target="_blank">Connect on LinkedIn</a></p>
 </div>
