--- a/index.html
+++ b/index.html
@@ -1,4 +1,37 @@
-<div class="container" style="
+<style>
+  /* Neon glow animation for the heading */
+  @keyframes neonGlow {
+    0% {
+      text-shadow: 0 0 5px #00e1ff, 0 0 10px #00e1ff, 0 0 15px #00e1ff;
+    }
+    50% {
+      text-shadow: 0 0 10px #ff00ff, 0 0 20px #00e1ff, 0 0 30px #00e1ff;
+    }
+    100% {
+      text-shadow: 0 0 5px #00e1ff, 0 0 10px #00e1ff, 0 0 15px #00e1ff;
+    }
+  }
+
+  .glow-title {
+    animation: neonGlow 2.5s infinite ease-in-out;
+    font-size: 2.5rem;
+    font-family: 'Orbitron', sans-serif;
+    color: #00e1ff;
+    margin-bottom: 20px;
+  }
+
+  .under-construction-section {
+    background: url('nb_more_faded.png') no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 80px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+
+  .glass-box {
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -6,23 +39,40 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0px 8px 32px 0 rgba(0, 255, 255, 0.37);
     padding: 40px;
-    margin-bottom: 50px;
-">
-  <h1 style="color: #00e1ff;">🚧 Site Under Construction 🚧</h1>
+    max-width: 700px;
+    text-align: center;
+  }
 
-  <img src="nb_more_faded.png" alt="Under Construction" style="
-      width: 100%;
-      max-width: 600px;
-      margin: 20px 0;
-      border-radius: 20px;
-      box-shadow: 0px 0px 20px rgba(0, 255, 255, 0.6);
-      opacity: 0.85;
-  " />
+  .glass-box p {
+    color: #e0e1dd;
+    font-size: 1.1em;
+  }
 
-  <p style="color: #e0e1dd; font-size: 1.1em;">Thank you for visiting! I'm currently working hard behind the scenes to upgrade this portfolio with even more exciting projects, insights, and futuristic designs.</p>
-  
-  <p style="color: #e0e1dd;">🚀 Stay tuned — amazing things are on the way!</p>
-  
-  <p><a href="https://github.com/cbilinski101" class="btn btn-custom" target="_blank">Visit My GitHub</a></p>
-  <p><a href="https://www.linkedin.com/in/christine-b-19367b31b" class="btn btn-custom" target="_blank">Connect on LinkedIn</a></p>
+  .btn-custom {
+    background: linear-gradient(135deg, #00e1ff, #ff00ff);
+    color: #fff;
+    border-radius: 25px;
+    padding: 12px 25px;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: 0.3s;
+    border: none;
+    margin: 10px;
+    display: inline-block;
+  }
+
+  .btn-custom:hover {
+    background: linear-gradient(135deg, #ff00ff, #00e1ff);
+    transform: scale(1.05);
+  }
+</style>
+
+<div class="under-construction-section">
+  <div class="glass-box">
+    <h1 class="glow-title">🚧 Site Under Construction 🚧</h1>
+    <p>Thank you for visiting! I'm currently working hard behind the scenes to upgrade this portfolio with exciting projects, visuals, and even more cosmic neon energy.</p>
+    <p>🚀 Stay tuned — amazing things are on the way!</p>
+    <p><a href="https://github.com/cbilinski101" class="btn btn-custom" target="_blank">Visit My GitHub</a></p>
+    <p><a href="https://www.linkedin.com/in/christine-b-19367b31b" class="btn btn-custom" target="_blank">Connect on LinkedIn</a></p>
+  </div>
 </div>
