--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('nb.png') no-repeat center center fixed;
+      background: url('nb_more_faded.png') no-repeat center center fixed;
       background-size: cover;
       color: #333;
     }
