--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       text-align: center;
     }
 
-    .contact, .projects, .experience {
+    .contact, .projects, .resume {
       margin-top: 2rem;
     }
 
@@ -51,6 +51,12 @@
     .skills {
       margin-top: 1rem;
       font-style: italic;
+    }
+
+    .resume-link {
+      display: block;
+      margin-top: 1rem;
+      text-align: center;
     }
   </style>
 </head>
@@ -82,16 +88,11 @@
       </div>
     </div>
 
-    <div class="experience">
-      <h2>Professional Experience</h2>
-      <p><strong>Haldimand-Norfolk REACH</strong> – Admin Assistant (2022–2024)<br>
-      Provided front desk support, data entry, appointment coordination, and internal reporting for early intervention programs.</p>
-
-      <p><strong>Disbrowe Chevrolet</strong> – Bookkeeper & Payroll (2007–2009)<br>
-      Managed payroll, government remittances, and T4 preparations with high accuracy using Excel and financial systems.</p>
-
-      <p><strong>Scotiabank, Jones Packaging</strong><br>
-      Held multiple roles supporting customer service, accounting, and administrative operations in fast-paced environments.</p>
+    <div class="resume">
+      <h2>Resume</h2>
+      <p class="resume-link">
+        📄 <a href="Christine_Bilinski_Resume.pdf" download>Click here to download my resume</a>
+      </p>
     </div>
 
     <div class="experience">
