--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('nb_more_faded.png') no-repeat center center fixed;
+      background: url('nb.png') no-repeat center center fixed;
       background-size: cover;
       color: #333;
     }
@@ -27,7 +27,7 @@
       text-align: center;
     }
 
-    .contact, .projects, .resume {
+    .contact, .projects, .experience {
       margin-top: 2rem;
     }
 
@@ -70,6 +70,9 @@
       <p>Email: <a href="mailto:cbilinski101@gmail.com">cbilinski101@gmail.com</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/christine-b-19367b31b" target="_blank">Christine Bilinski</a></p>
       <p>GitHub: <a href="https://github.com/cbilinski101" target="_blank">cbilinski101</a></p>
+      <p class="resume-link">
+        📄 <a href="Christine_Bilinski_Admin_Assistant_Resume.docx" download>Download Resume</a>
+      </p>
     </div>
 
     <div class="projects">
@@ -88,11 +91,16 @@
       </div>
     </div>
 
-    <div class="resume">
-      <h2>Resume</h2>
-      <p class="resume-link">
-        📄 <a href="Christine_Bilinski_Resume.pdf" download>Click here to download my resume</a>
-      </p>
+    <div class="experience">
+      <h2>Professional Experience</h2>
+      <p><strong>Haldimand-Norfolk REACH</strong> – Admin Assistant (2022–2024)<br>
+      Provided front desk support, data entry, appointment coordination, and internal reporting for early intervention programs.</p>
+
+      <p><strong>Disbrowe Chevrolet</strong> – Bookkeeper & Payroll (2007–2009)<br>
+      Managed payroll, government remittances, and T4 preparations with high accuracy using Excel and financial systems.</p>
+
+      <p><strong>Scotiabank, Jones Packaging</strong><br>
+      Held multiple roles supporting customer service, accounting, and administrative operations in fast-paced environments.</p>
     </div>
 
     <div class="experience">
