--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <p>LinkedIn: <a href="https://www.linkedin.com/in/christine-b-19367b31b" target="_blank">Christine Bilinski</a></p>
       <p>GitHub: <a href="https://github.com/cbilinski101" target="_blank">cbilinski101</a></p>
       <p class="resume-link">
-        📄 <a href="Christine_Bilinski_Admin_Assistant_Resume.docx" download>Download Resume</a>
+        📄 <a href="Christine_Bilinski_Resume.pdf" download>Download Resume</a>
       </p>
     </div>
 
