--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('nb.png') no-repeat center center fixed;
+      background: url('nb_more_faded.png') no-repeat center center fixed;
       background-size: cover;
       color: #333;
     }
@@ -27,7 +27,7 @@
       text-align: center;
     }
 
-    .contact, .projects, .experience {
+    .section {
       margin-top: 2rem;
     }
 
@@ -58,24 +58,31 @@
       margin-top: 1rem;
       text-align: center;
     }
+
+    .intro {
+      text-align: center;
+      font-size: 1.1rem;
+      line-height: 1.6;
+    }
   </style>
 </head>
 <body>
   <div class="overlay">
     <h1>Christine Bilinski</h1>
-    <p style="text-align: center;">Administrative Professional | Data Analytics Graduate | Customer-Centric Problem Solver</p>
+    <p class="intro">
+      I am a detail-oriented administrative professional with over 10 years of experience supporting fast-paced office environments in sectors including finance, healthcare, and manufacturing. 
+      After completing the University of Toronto’s Data Analytics Bootcamp with a final grade of 99.7%, I’ve merged my administrative strengths with modern data skills—creating dashboards, visualizations, and predictive models.
+      I thrive in collaborative spaces where organization, communication, and data-driven thinking come together to improve services and operations.
+    </p>
 
-    <div class="contact">
+    <div class="section">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:cbilinski101@gmail.com">cbilinski101@gmail.com</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/christine-b-19367b31b" target="_blank">Christine Bilinski</a></p>
       <p>GitHub: <a href="https://github.com/cbilinski101" target="_blank">cbilinski101</a></p>
-      <p class="resume-link">
-        📄 <a href="Christine_Bilinski_Resume.pdf" download>Download Resume</a>
-      </p>
     </div>
 
-    <div class="projects">
+    <div class="section">
       <h2>Featured Projects</h2>
       <div class="project">
         <p class="project-title"><a href="https://cbilinski101.github.io/leaflet-challenge/" target="_blank">🌍 Leaflet Earthquake Visualization</a></p>
@@ -91,19 +98,26 @@
       </div>
     </div>
 
-    <div class="experience">
+    <div class="section">
       <h2>Professional Experience</h2>
-      <p><strong>Haldimand-Norfolk REACH</strong> – Admin Assistant (2022–2024)<br>
-      Provided front desk support, data entry, appointment coordination, and internal reporting for early intervention programs.</p>
+      <p><strong>Haldimand-Norfolk REACH</strong> – Administrative Assistant (2022–2024)<br>
+      Frontline support for youth and family programs; handled scheduling, client intake, reception, and internal reporting using Excel and internal systems.</p>
 
-      <p><strong>Disbrowe Chevrolet</strong> – Bookkeeper & Payroll (2007–2009)<br>
-      Managed payroll, government remittances, and T4 preparations with high accuracy using Excel and financial systems.</p>
+      <p><strong>Disbrowe Chevrolet</strong> – Bookkeeper / Payroll Assistant (2007–2009)<br>
+      Managed payroll processing, source deductions, T4s, and financial reconciliations with a focus on accuracy and audit readiness.</p>
 
-      <p><strong>Scotiabank, Jones Packaging</strong><br>
-      Held multiple roles supporting customer service, accounting, and administrative operations in fast-paced environments.</p>
+      <p><strong>Scotiabank / Jones Packaging</strong><br>
+      Provided customer service, data entry, accounts payable, and financial recordkeeping support across banking and manufacturing roles.</p>
     </div>
 
-    <div class="experience">
+    <div class="section">
+      <h2>Resume</h2>
+      <p class="resume-link">
+        📄 <a href="Christine_Bilinski_Resume.pdf" download>Click here to download my resume</a>
+      </p>
+    </div>
+
+    <div class="section">
       <h2>Data Analytics & Technical Skills</h2>
       <p>Certified in Data Analytics – University of Toronto (99.7% final grade)</p>
       <p class="skills">Python • SQL • Excel • Tableau • Power BI • JavaScript • Plotly.js • Data Cleaning • Visualization • Machine Learning Basics</p>
