--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 
     <div class="section">
       <h2>Professional Experience</h2>
+      <p><strong>ServiceTitan</strong> – Live Services Agent (May 2025 - Present)<br>
+      Provide reliable, compassionate customer support by coordinating appointments and ensuring clear communication across trades.</p>
+      
       <p><strong>Haldimand-Norfolk REACH</strong> – Administrative Assistant (2022–2024)<br>
       Frontline support for youth and family programs; handled scheduling, client intake, reception, and internal reporting using Excel and internal systems.</p>
 
